# OnlineTankGamePy

./: .gitignore  README.md
backend/: .env.example  DATABASE.md  Makefile  PERSISTENCE_LAYER.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 9f676f18e6c3_add_player_last_login_fields.py  dae9bca9970a_initial_migration_with_all_core_models.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  deps.py  gameplay.py  rooms.py  ws.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  redis.py  security.py
backend/app/game/: collision.py  map.py
backend/app/models/: __init__.py  player.py  projectile.py  room.py  room_membership.py  tank_state.py
backend/app/repositories/: __init__.py  base.py  player.py  projectile.py  room.py  room_membership.py  tank_state.py
backend/app/schemas/: __init__.py  auth.py  player.py  projectile.py  room.py  tank.py  ws.py
backend/app/services/: __init__.py  game_service.py  player_service.py  room_service.py
backend/app/ws/: manager.py
backend/tests/: conftest.py  test_auth.py  test_rooms.py
frontend/: .gitignore  README.md  index.html  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/game/: GameEngine.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
frontend/src/views/: GameView.css  GameView.tsx  LobbyView.css  LobbyView.tsx  LoginView.css  LoginView.tsx
